--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/MainPage.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/MainPage.xaml
@@ -7,7 +7,26 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <NavigationView Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+                ItemInvoked="NavView_ItemInvoked"
+                Loaded="NavView_Loaded"
+                Name="NavView">
 
-    </Grid>
+        <NavigationView.MenuItems>
+            <NavigationViewItemHeader Content="Receitas"/>
+            <NavigationViewItem Content="Minhas receitas" Tag="receitas">
+                <NavigationViewItem.Icon>
+                    <FontIcon Glyph="&#xED56;"/>
+                </NavigationViewItem.Icon>
+            </NavigationViewItem>
+            <NavigationViewItem Icon="Clock" Content="Timer" Tag="timer"/>
+        </NavigationView.MenuItems>
+
+        <NavigationView.Content>
+            <Frame x:Name="ContentFrame" Margin="24" Navigated="On_Navigated">
+
+            </Frame>
+        </NavigationView.Content>
+
+    </NavigationView>
 </Page>
