Criada lista de receitas

--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ReceitasPage.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ReceitasPage.xaml
@@ -8,6 +8,9 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Receitas" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <StackPanel Margin="15">
+            <ListView Name="lstReceitas" DisplayMemberPath="Titulo">
+            </ListView>
+        </StackPanel>
     </Grid>
 </Page>
