--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ReceitasPage.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ReceitasPage.xaml
@@ -5,11 +5,52 @@
     xmlns:local="using:FIAPMinhasReceitas.UWP.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:FIAPMinhasReceitas.Models"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="15">
-            <ListView Name="lstReceitas" DisplayMemberPath="Titulo">
+            <ListView Name="lstReceitas" ItemsSource="{x:Bind ViewModel.Receitas, Mode=OneWay}">
+                <ListView.HeaderTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <Border BorderBrush="Black"  BorderThickness="0,0,0,0.5">
+                                <TextBlock Text="Título" Margin="5,0,0,0" />
+                            </Border>
+                            <Border Grid.Column="1" BorderBrush="Black" BorderThickness="0,0,0,0.5">
+                                <TextBlock Text="Categoria" Margin="5,0,0,0"/>
+                            </Border>
+                            <Border Grid.Column="2" BorderBrush="Black" BorderThickness="0,0,0,0.5">
+                                <TextBlock Text="Tempo de preparo" Margin="0,0,5,0" HorizontalAlignment="Right" />
+                            </Border>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.HeaderTemplate>
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Receita">
+                        <Grid Margin="12">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{x:Bind Titulo, Mode=OneWay}" />
+                            <TextBlock Text="{x:Bind Categoria, Mode=OneWay}" Grid.Column="1" />
+                            <TextBlock Text="{x:Bind MinutosPreparo, Mode=OneWay}" Grid.Column="2" HorizontalAlignment="Right" />
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment"  Value="Stretch"></Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
             </ListView>
         </StackPanel>
     </Grid>
