--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/MainPage.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/MainPage.xaml
@@ -12,6 +12,28 @@
                 Loaded="NavView_Loaded"
                 Name="NavView">
 
+        <NavigationView.HeaderTemplate>
+            <DataTemplate>
+                <Grid Margin="24,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Style="{StaticResource TitleTextBlockStyle}"
+                    FontSize="28"
+                    VerticalAlignment="Center"
+                    Text="{Binding Header, ElementName=NavView}"/>
+                    <CommandBar Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    DefaultLabelPosition="Right"
+                    Background="Transparent">
+                        <AppBarButton Label="Nova Receita" Icon="Add" Click="NovaReceitaAppBarButton_Click"/>
+                    </CommandBar>
+                </Grid>
+            </DataTemplate>
+        </NavigationView.HeaderTemplate>
+        
         <NavigationView.MenuItems>
             <NavigationViewItemHeader Content="Receitas"/>
             <NavigationViewItem Content="Minhas receitas" Tag="receitas">
@@ -23,7 +45,7 @@
         </NavigationView.MenuItems>
 
         <NavigationView.Content>
-            <Frame x:Name="ContentFrame" Margin="24" Navigated="On_Navigated">
+            <Frame x:Name="ContentFrame" Margin="24">
 
             </Frame>
         </NavigationView.Content>
