--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ConfiguracoesPage.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ConfiguracoesPage.xaml
@@ -5,9 +5,21 @@
     xmlns:local="using:FIAPMinhasReceitas.UWP.Pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converter="using:FIAPMinhasReceitas.UWP.Converters"
     mc:Ignorable="d">
 
+    <Page.Resources>
+        <converter:RadioButtonToNullableIntConverter x:Key="RadioButtonToNullableInt" />
+    </Page.Resources>
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="Configurações" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <StackPanel Margin="12">
+            <TextBlock Text="Ordenação" Margin="0,20" />
+
+            <RadioButton GroupName="OrdemListaReceitas" Content="Por Título" 
+            IsChecked="{x:Bind ViewModel.OrdemListaReceitasConfiguracao, Mode=TwoWay, Converter={StaticResource RadioButtonToNullableInt}, ConverterParameter=0 }" />
+            <RadioButton GroupName="OrdemListaReceitas" Content="Por Tempo de preparo" 
+            IsChecked="{x:Bind ViewModel.OrdemListaReceitasConfiguracao, Mode=TwoWay, Converter={StaticResource RadioButtonToNullableInt}, ConverterParameter=1 }" />
+        </StackPanel>
     </Grid>
 </Page>
