--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ReceitasPage.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/Pages/ReceitasPage.xaml
@@ -21,6 +21,7 @@
                     <DataTemplate>
                         <Grid>
                             <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="2*" />
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="*" />
@@ -28,15 +29,19 @@
                             </Grid.ColumnDefinitions>
 
                             <Border BorderBrush="Black"  BorderThickness="0,0,0,0.5">
+                                
+                            </Border>
+                            
+                            <Border Grid.Column="1" BorderBrush="Black"  BorderThickness="0,0,0,0.5">
                                 <TextBlock Text="Título" Margin="5,0,0,0" />
                             </Border>
-                            <Border Grid.Column="1" BorderBrush="Black" BorderThickness="0,0,0,0.5">
+                            <Border Grid.Column="2" BorderBrush="Black" BorderThickness="0,0,0,0.5">
                                 <TextBlock Text="Categoria" Margin="5,0,0,0"/>
                             </Border>
-                            <Border Grid.Column="2" BorderBrush="Black" BorderThickness="0,0,0,0.5">
+                            <Border Grid.Column="3" BorderBrush="Black" BorderThickness="0,0,0,0.5">
                                 <TextBlock Text="Preço" Margin="5,0,0,0"/>
                             </Border>
-                            <Border Grid.Column="3" BorderBrush="Black" BorderThickness="0,0,0,0.5">
+                            <Border Grid.Column="4" BorderBrush="Black" BorderThickness="0,0,0,0.5">
                                 <TextBlock Text="Tempo de preparo" Margin="0,0,5,0" HorizontalAlignment="Right" />
                             </Border>
 
