--- a/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/UserControls/ReceitasListUserControl.xaml
+++ b/FIAPMinhasReceitas.UWP/FIAPMinhasReceitas.UWP/UserControls/ReceitasListUserControl.xaml
@@ -16,6 +16,30 @@
     </UserControl.Resources>
     
     <Grid Margin="12">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="VisualStateGroupMinWidth">
+                <VisualState x:Name="VisualStateMinWidth1">
+                    <VisualState.Setters>
+                        <Setter Target="imgReceita.(UIElement.Visibility)" Value="Collapsed"/>
+                        <Setter Target="lblTitulo.(Grid.Column)" Value="0"/>
+                        <Setter Target="lblTitulo.(Grid.ColumnSpan)" Value="2"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1"/>
+                    </VisualState.StateTriggers>
+                </VisualState>
+                <VisualState x:Name="VisualStateMinWidth640">
+                    <VisualState.Setters>
+                        <Setter Target="imgReceita.(UIElement.Visibility)" Value="Visible"/>
+                        <Setter Target="lblTitulo.(Grid.Column)" Value="1"/>
+                        <Setter Target="lblTitulo.(Grid.ColumnSpan)" Value="1"/>
+                    </VisualState.Setters>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="640"/>
+                    </VisualState.StateTriggers>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="2*"/>
